Fixed main navigation links colors on mobile
Former-commit-id: 29a7dcc0a49a2dd5f2407bc37dc58086a77742cc

--- a/ui.apps/src/main/content/jcr_root/apps/we-retail/components/structure/header/clientlib/less/navbar.less
+++ b/ui.apps/src/main/content/jcr_root/apps/we-retail/components/structure/header/clientlib/less/navbar.less
@@ -251,7 +251,7 @@
       clear: left;
     }
 
-    &> a {
+    & > a {
       display: block;
 
       padding: 8px 0;
@@ -264,12 +264,11 @@
   }
 
   .navbar-default & {
-    border-top-color: @navbar-default-border;
-
-    a {
-      color: #000;
+      a {
+        color: #fff;
+      }
     }
-  }
+
 
   .navbar-inverse & {
     border-top-color: fade(#fff, 20);
@@ -284,6 +283,14 @@
       top: 100%;
       right: @grid-gutter-width/2;
       left: @grid-gutter-width/2;
+
+      .navbar-default & {
+        border-top-color: @navbar-default-border;
+
+        a {
+          color: #000;
+        }
+      }
   }
 }
 
